--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ runup_app/migrations/*
 config/__pycache__/*
 runup_migrate/*
 media/*
+accounts/migrations/__init__.py
+accounts/migrations/0001_initial.py
+accounts/migrations/__pycache__/__init__.cpython-37.pyc
+accounts/migrations/__pycache__/0001_initial.cpython-37.pyc
+accounts/__pycache__/__init__.cpython-37.pyc
+accounts/__pycache__/admin.cpython-37.pyc
+accounts/__pycache__/models.cpython-37.pyc
