--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ accounts/migrations/__pycache__/0001_initial.cpython-37.pyc
 accounts/__pycache__/__init__.cpython-37.pyc
 accounts/__pycache__/admin.cpython-37.pyc
 accounts/__pycache__/models.cpython-37.pyc
+.vscode/settings.json
