--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,45 @@
 appdirs==1.4.4
 asgiref==3.3.1
+astroid @ file:///C:/ci/astroid_1592487315634/work
+autopep8 @ file:///tmp/build/80754af9/autopep8_1596578164842/work
 backcall==0.2.0
 certifi==2020.11.8
-colorama==0.4.3
+colorama @ file:///tmp/build/80754af9/colorama_1603211150991/work
 decorator==4.4.2
 distlib==0.3.1
 Django==3.1.4
+filelock==3.0.12
 ipykernel==5.3.4
 ipython==7.16.1
 ipython-genutils==0.2.0
+isort @ file:///tmp/build/80754af9/isort_1602603989581/work
 jedi==0.17.2
 jupyter-client==6.1.6
 jupyter-core==4.6.3
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 parso==0.7.1
 pickleshare==0.7.5
 Pillow==8.0.1
 pipenv==2020.6.2
 prompt-toolkit==3.0.5
+psycopg2==2.8.6
+pycodestyle==2.6.0
 Pygments==2.6.1
+pylint @ file:///C:/ci/pylint_1598617153160/work
+pylint-django==2.3.0
+pylint-plugin-utils==0.6
+python-dateutil==2.8.1
 pytz==2020.4
+pywin32==228
 pyzmq==19.0.1
+six @ file:///C:/ci/six_1605187374963/work
 sqlparse==0.4.1
+toml @ file:///tmp/build/80754af9/toml_1592853716807/work
 tornado==6.0.4
 traitlets==4.3.3
 virtualenv==20.0.28
 virtualenv-clone==0.5.4
 wcwidth==0.2.5
 wincertstore==0.2
+wrapt==1.11.2
